--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
