--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.0",
+    "async": "^3.2.3",
     "css-loader": "^6.7.1",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
@@ -15,9 +16,12 @@
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
