--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.0",
     "async": "^3.2.3",
+    "axios": "^0.26.1",
     "css-loader": "^6.7.1",
     "firebase": "^9.6.9",
     "firebase-admin": "^10.0.2",
