--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^8.2.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
