--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "antd": "^4.19.0",
     "async": "^3.2.3",
     "css-loader": "^6.7.1",
-    "firebase": "^9.6.9",
+    "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
@@ -49,5 +49,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.8",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.4"
   }
 }
