--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.4"
+    "babel-loader": "^8.2.4",
+    "tailwindcss": "^3.0.23"
   }
 }
