--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "node-modules": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
