--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "node-modules": "^1.0.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.7",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
@@ -26,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "style-loader": "^3.3.1",
+    "typewriter-effect": "^2.18.2",
     "url-loader": "^4.1.1",
     "web-vitals": "^2.1.4"
   },
