--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "stripe": "^8.217.0"
   }
 }
