--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "node-modules": "^1.0.1",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.7",
     "react-modal-image": "^2.5.0",
