--- a/client/package.json
+++ b/client/package.json
@@ -3,27 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@david.kucsai/react-pdf-table": "^0.4.1",
-    "@react-pdf/renderer": "^2.1.1",
     "@stripe/react-stripe-js": "^1.7.1",
     "@stripe/stripe-js": "^1.27.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.0",
-    "assert": "^2.0.0",
     "async": "^3.2.3",
     "axios": "^0.26.1",
     "browserify-zlib": "^0.2.0",
-    "buffer": "^6.0.3",
     "css-loader": "^6.7.1",
     "firebase": "^9.6.10",
     "firebase-admin": "^10.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lodash": "^4.17.21",
+    "node-jose-browserify": "^1.1.14",
     "node-modules": "^1.0.1",
-    "process": "^0.11.10",
     "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.7.0",
@@ -40,14 +36,10 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "stream": "0.0.2",
-    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "typewriter-effect": "^2.18.2",
     "url-loader": "^4.1.1",
-    "util": "^0.12.4",
-    "web-vitals": "^2.1.4",
-    "zlib": "^1.0.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
