--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.0",
-    "async": "^3.2.3",
     "axios": "^0.26.1",
     "browserify-zlib": "^0.2.0",
     "css-loader": "^6.7.1",
@@ -21,7 +20,7 @@
     "node-jose-browserify": "^1.1.14",
     "node-modules": "^1.0.1",
     "query-string": "^7.1.1",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.7",
@@ -39,7 +38,8 @@
     "style-loader": "^3.3.1",
     "typewriter-effect": "^2.18.2",
     "url-loader": "^4.1.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.22.18"
   },
   "scripts": {
     "start": "react-scripts start",
