--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,10 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "lodash": "^4.17.21",
-    "node-modules": "^0.0.1",
     "node-jose-browserify": "^1.1.14",
     "node-modules": "^1.0.1",
     "query-string": "^7.1.1",
+    "quill": "^1.3.7",
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
@@ -69,7 +69,7 @@
   "devDependencies": {
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.4",
+    "babel-loader": "^8.0.5",
     "tailwindcss": "^3.0.23"
   }
 }
