--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.5",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
