--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "17.0.2",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-image-file-resizer": "^0.4.7",
     "react-modal-image": "^2.5.0",
     "react-quill": "^1.3.5",
