--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,11 @@
     "firebase-admin": "^10.0.2",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.2.8",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.5",
+    "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.15",
     "slugify": "^1.6.5",
     "stripe": "^8.217.0",
