--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "nodemon ./server.js --exec babel-node -e js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.28.5",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.29.0",
     "cors": "^2.8.5",
@@ -26,6 +29,7 @@
     "nodemailer": "^6.7.5",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.15",
+    "slug": "^5.3.0",
     "slugify": "^1.6.5",
     "stripe": "^8.217.0",
     "uniqueid": "^1.0.0"
