[fix] upload iamge

--- a/server/.env
+++ b/server/.env
@@ -17,3 +17,4 @@ EMAIL = "longnvph10985@fpt.edu.vn"
 PASSWORD = "l0923352919"
 
 RESET_PASSWORD_KEY = accountactivatekey123456
+BASE_URL="http://localhost:5000"
