--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.30.0",
     "react-image-file-resizer": "^0.4.7",
+    "react-images-upload": "^1.2.8",
     "react-modal-image": "^2.5.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
